Extract remove discount as a separated API >